--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
+    paths:
+      - 'action/flag'
   workflow_dispatch:
 
 env:
@@ -73,3 +74,28 @@ jobs:
           ls -la
           echo "Build directory contents:"
           ls -la build/
+
+      - name: Deploy to Server
+        if: success()
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /home/ecs-user/omnidoc
+            echo "Starting deployment..."
+            
+            # 拉取新镜像
+            docker-compose pull
+            
+            # 停止并移除旧容器
+            docker-compose down --remove-orphans
+            
+            # 启动新容器
+            docker-compose up -d
+            
+            # 清理未使用的镜像
+            docker image prune -f
+            
+            echo "Deployment completed"
