--- a/nginx.conf
+++ b/nginx.conf
@@ -23,11 +23,15 @@ http {
     server {
         listen       80;
         server_name  localhost;
-
-      location / {
+        location / {
             root   /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
             index  index.html index.htm;
+        }
+
+        location = /.well-known/apple-app-site-association {
+            add_header Content-Type application/json;
+            root /var/www/docusaurus/static;
         }
 
         error_page   500 502 503 504  /50x.html;
