--- a/nginx.conf
+++ b/nginx.conf
@@ -31,7 +31,9 @@ http {
 
         location = /.well-known/apple-app-site-association {
             add_header Content-Type application/json;
-            root /var/www/docusaurus/static;
+            root   /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+            index  index.html index.htm;
         }
 
         error_page   500 502 503 504  /50x.html;
